--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,2 @@
 
-spring.datasource.url=jdbc:postgresql://localhost:15432/woflgan
-spring.datasource.username=postgres
-spring.datasource.password=Postgres2019!
-
-spring.jpa.hibernate.ddl-auto=update
-
+spring.profiles.active: h2
