--- a/src/main/resources/application-h2.properties
+++ b/src/main/resources/application-h2.properties
@@ -7,3 +7,31 @@ spring.h2.console.enabled=true
 
 spring.jpa.hibernate.ddl-auto=update
 
+# Tempo e a palavra secreta para token
+jwt.secret=asduahausihduha4543542t345g65y76hsduhasuhdsadbvf
+jwt.expiration=60000
+
+# limitar números de páginas
+spring.data.rest.default-page-size=5
+
+# configuração envio de email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=email.para.estudos.java@gmail.com
+spring.mail.password=Matrix02Gerlin
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# HikariCP
+# número máximo de milissegundos que um cliente irá esperar por uma conexão
+spring.datasource.hikari.connection-timeout=20000
+# número mínimo de conexões inativas mantidas pelo HikariCP em um pool de conexão
+spring.datasource.hikari.minimum-idle=10
+# tamanho máximo da piscina
+spring.datasource.hikari.maximum-pool-size=10
+# tempo ocioso máximo para conexão
+spring.datasource.hikari.idle-timeout=10000
+# vida útil máxima em milissegundos de uma conexão no pool depois que ele é fechado.
+spring.datasource.hikari.max-lifetime=1000
+# comportamento padrão de auto-commit.
+spring.datasource.hikari.auto-commit=true 
