Commit com exibir pesquisa preco

--- a/src/main/resources/application-h2.properties
+++ b/src/main/resources/application-h2.properties
@@ -9,7 +9,8 @@ spring.jpa.hibernate.ddl-auto=update
 
 # Tempo e a palavra secreta para token
 jwt.secret=asduahausihduha4543542t345g65y76hsduhasuhdsadbvf
-jwt.expiration=60000
+# 2 Zero a mais
+jwt.expiration=6000000
 
 # limitar números de páginas
 spring.data.rest.default-page-size=5
